// Copyright 2022 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package datacommons.v1;

option go_package = "github.com/datacommonsorg/mixer/internal/proto/v1";

import "stat.proto";

// Holds the count of entities for a particular facet.
message EntityCount {
  // Count of the entity.
  double count = 1;
  // The facet hash string.
  string facet = 2;
}

message ObservationDates {
  // Date of observation
  string date = 1;
  // For each facet, record the number of entities that have observations.
  repeated EntityCount entity_count = 2;
}

message VariableObservationDates {
  // The stat var DCID.
  string variable = 1;
  // A list of observation data information for each stat var.
  repeated ObservationDates observation_dates = 3;
}

message BulkObservationDatesLinkedRequest {
  // The observed entity type
  string entity_type = 1;
  // The entity that is linked to the observed entity
  string linked_entity = 2;
  // The property that links the root and observed entity
  string linked_property = 3;
  // Variables to query for
  repeated string variables = 4;
}

message BulkObservationDatesLinkedResponse {
  repeated VariableObservationDates dates_by_variable = 1;
  map<string, datacommons.Facet> facets = 2;
}